2005-02-24  Kjartan Maraas  <kmaraas@gnome.org>

	* src/preferences.c: Add missing header.

2005-02-03  Björn Torkelsson  <torkel@acc.umu.se>

	* src/exec.c: (mc_exec_command): Save the unexpanded command. See 
	bug #166202.

2005-01-21  Benoît Dejean  <TazForEver@dlfp.org>

	* src/preferences.c: (mc_macros_free): Fixed leak. See #124456.

2005-01-09  Davyd Madeley  <davyd@madeley.id.au>

	* src/command_line.c: Set cursor to be same colour as the text
	  (useful when your background is black). Closes bug #97663.

2005-01-07  Elijah Newren  <newren@gmail.com>

	Since the panel won't be automatically focused on click anymore,
	be sure to manually request focus.  Fixes #161736.

	* src/command_line.c (button_press_cb): call
	panel_applet_request_focus() first, also make the trivial
	correction of s/GdkEventKey/GdkEventButton/

2004-11-10  Mark McLoughlin  <mark@skynet.ie>

	Fix to make old configurations continue to work with
	newer versions of the applet. See bug #91194.

	* src/mini-commander.schemas.in: add back the deprecated
	per-applet schemas for macros.
	
	* src/mc-install-default-macros.c: (main): install the
	defaults for the deprecated schemas.

2004-10-30  Davyd Madeley  <davyd@madeley.id.au>

	* src/preferences.c:
	* src/mc-install-default-macros.c:
	* src/mini-commander.schemas.in:
	* src/mini-commander-global.schemas.in:
	* src/Makefile.am: Make macro list global for all instances of the
	  mini-commander applet. Closes bug #91194.

2004-09-06  Shaun McCance  <shaunm@gnome.org>

	* help/C/command-line-C.omf:
	* help/C/command-line.xml:
	- Updates for 2.8 from Angela Boyle

2004-08-30  Davyd Madeley  <davyd@madeley.id.au>

	* src/mc-default-macros.h: Change "dictionary:" macro to use
	gnome-dictionary.

2004-08-16  Davyd Madeley  <davyd@madeley.id.au>

	* src/exec.c: Removed dependancy on egg-screen-exec.h
	* src/mini-commander_applet.h: Increased max command size to 505 to
	compensate for added (?) that can appear before strings. Closes
	#150058.
