@@ -1,3 +1,8 @@
+2005-03-07  Davyd Madeley  <davyd@madeley.id.au>
+
+	* docs/C/figures/*.png: Some new images.
+	* docs/C/command-line.xml: Update documentation for GNOME 2.10.
+
 2005-02-24  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* src/preferences.c: Add missing header.
